<resources>
    <string name="name">欧企查</string>
    <string name="app_name">EuropeBusiness</string>
    <string name="login_msg">短信登录</string>
    <string name="login_password">密码登录</string>
    <string name="login">登录</string>
    <string name="input_phoneoremail">请输入手机号或邮箱</string>
    <string name="input_verification">请输入验证码</string>
    <string name="register">注册</string>
    <string name="main">首页</string>
    <string name="european_enterprises">欧企</string>
    <string name="chinese_enterprises">华企</string>
    <string name="follow">关注</string>
    <string name="mine">我的</string>
    <string name="input_password">请输入密码</string>
    <string name="select_hint">请输入公司名等名字</string>

</resources>
